@@ -22,18 +22,29 @@ If you want to learn more about JavaFX, please visit its website: <https://openj
 
 # ------------------------------------------
 
-#### Running the application :
+#### Running the application
 
 You can run your application with maven javafx plugin using:
 
 ```shell script
+
 ./mvnw javafx:run
 ```
 
-Or with jre/jdk javafx modules:controls,fxml added using:
+Or with  Maven/NonMaven [jre/jdk javafx modules:controls,fxml] added using:
+
 ```shell script
-./mvnw exec:java  mainClass -classpath %classpath --module-path  "{project.basedir}/lib/jfx/" --add-modules=javafx.fxml,javafx.controls,javafx.media
+java "
+--module-path  "{project.basedir}/lib/jfx/" \
+--add-modules=javafx-fxml,javafx-controls,javafx-media \
+--add-opens=javafx-fxml/javafx-fxml=ALL-UNNAMED \
+-cp /lib/scenebuilder/scenebuilder-kit-19.0.0.jar \
+com.oracle.javafx.scenebuilder.app.SceneBuilderApp
+"
+
+./mvnw exec:java {mainClass} "-classpath %classpath --module-path  "{project.basedir}/lib/jfx/" --add-modules=javafx-fxml,javafx-controls,javafx-media"
 ```
+
 # ------------------------------------------
 
 #### Packaging the application
@@ -43,6 +54,7 @@ The application can be packaged using:
 ```shell script
 ./mvnw jar:jar target/*.jar
 ```
+
 # ------------------------------------------
 
 #### Creating a native executable
@@ -52,5 +64,5 @@ You can create a native executable using GraalVM:
 ```shell script
 mvn -Pnative -Dagent=true -DskipTests=true -DskipNativeBuild=true package exec:exec@java-agent
 ```
-# ------------------------------------------
 
+# ------------------------------------------
